--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.1.8",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^2.0.19",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
