--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mapbox-gl": "^2.7.0",
     "mapbox-gl-geocoder": "^2.0.1",
     "method-override": "^3.0.0",
+    "mongodb": "^5.6.0",
     "mongoose": "^6.1.8",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
